# Elkeid

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README-ja.md  README-zh_CN.md  README.md
agent/driver/: .gitignore  Cargo.toml  Makefile  README-zh_CN.md  README.md  build.rs  template.toml
agent/driver/src/: cache.rs  config.rs  main.rs  parser.rs  prepare.rs
agent/journal_watcher/: .gitignore  Cargo.toml  LICENSE  Makefile  README-zh_CN.md  README.md
agent/journal_watcher/src/: main.rs  watcher.rs
agent/scanner/: Cargo.toml  README-zh_CN.md  README.md  build.sh
agent/scanner/src/: config.rs  cronjob.rs  detector.rs  filter.rs  fmonitor.rs  lib.rs
driver/: .gitignore  Cargo.toml  Makefile  README-zh_CN.md  README.md  VERSION  batch_compile.sh  batch_compile_el7.sh  batch_compile_el7_centosplus.sh  batch_compile_el8_plus.sh  batch_compile_elrepo6.sh  batch_compile_elrepo7_lt.sh  batch_compile_elrepo7_ml.sh  batch_compile_elrepo8_lt.sh  batch_compile_elrepo8_ml.sh  batch_compile_elrepo8_plus.sh  build.rs  gen_ci_from_dockerfiles.py  gen_euler.py  ko_list.md  ltp_testcase
driver/.cargo/: config.toml
driver/BPF/: .gitmodules  Makefile  README  build  consume.c  driver.bpf.c  driver.btf.c  hids.bpf.c  hids.c  xfer.c
driver/BPF/hids/: hids.h  kprobe_print.h  vmlinux.h  xfer.h
driver/DOC/: Description_of_Elkeid's_Crash_caused_by_fput_in_low_version_Kernel.md
driver/LKM/: KPROBE.md  Kconfig  Makefile  awkscript  batch_compile.sh  centos_build_ko.sh  centos_check.sh  configs.mk  d_alias_check.sh  dkms.conf  find-provides  kprobe.lds  mongoose-driver-dkms-mkrpm.spec  ringbuffer_struct_check.sh  ubuntu_build_ko.sh  unbuntu_check.sh
driver/LKM/include/: anti_rootkit.h  anti_rootkit_print.h  define_trace.h  filter.h  kprobe.h  kprobe_print.h  memcache.h  print_event.h  protector.h  ring.h  slot.h  smith_hook.h  struct_wrap.h  trace.h  trace_buffer.h  util.h  xfer.h
driver/LKM/src/: anti_rootkit.c  core.c  filter.c  init.c  kprobe.c  memcache.c  protector.c  slot.c  smith_hook.c  trace.c  trace_buffer.c  util.c
driver/LKM/test/: Makefile  dns.allowed.json  dns.blocked.json  main.c  ring.c  ring.h  xfer.c
driver/LKM/zua/: Makefile  zua_parser.c  zua_parser.h  zua_parser_defs.h  zua_scanner.h  zua_type.c  (+1 more)
driver/build_script/: gen_ci_from_dockerfiles.py
driver/debian/: changelog  control  postinst  prerm  rules
driver/dockerfiles/: Dockerfile.aliyun_linux2  Dockerfile.aliyun_linux3  Dockerfile.amazonlinux  Dockerfile.amazonlinux510  Dockerfile.amazonlinux54  Dockerfile.debian10  Dockerfile.debian11  Dockerfile.debian8  Dockerfile.debian9  Dockerfile.rhel6  Dockerfile.rhel6_elrepo  Dockerfile.rhel6_elrepo_lt  Dockerfile.rhel6_elrepo_ml  Dockerfile.rhel7  Dockerfile.rhel7_centosplus  Dockerfile.rhel7_elrepo  Dockerfile.rhel7_elrepo_lt  Dockerfile.rhel7_elrepo_ml  Dockerfile.rhel8  Dockerfile.rhel8_elrepo  Dockerfile.rhel8_elrepo_lt  Dockerfile.rhel8_elrepo_ml  Dockerfile.rhel8_plus  Dockerfile.tlinux24  Dockerfile.tlinux31  Dockerfile.ubuntu1204  Dockerfile.ubuntu1404_k3  Dockerfile.ubuntu1404_k4  Dockerfile.ubuntu1604_auzre  Dockerfile.ubuntu1604_aws  Dockerfile.ubuntu1604_k410  Dockerfile.ubuntu1604_k413  Dockerfile.ubuntu1604_k44  Dockerfile.ubuntu1604_k48  Dockerfile.ubuntu1804  Dockerfile.ubuntu1804_aws  Dockerfile.ubuntu1804_azure  Dockerfile.ubuntu2004  Dockerfile.ubuntu2004_aws  Dockerfile.ubuntu2004_azure  (+1 more)
driver/dockerfiles.aarch64/: Dockerfile.aliyun_linux3  Dockerfile.ol8_uek  Dockerfile.rhel7  Dockerfile.rhel8  Dockerfile.ubuntu2004_aws
driver/dockerfiles.x86_64/: Dockerfile.aliyun_linux2  Dockerfile.aliyun_linux3  Dockerfile.almalinux8  Dockerfile.almalinux9  Dockerfile.amazonlinux  Dockerfile.amazonlinux1  Dockerfile.amazonlinux2  Dockerfile.amazonlinux2_510  Dockerfile.amazonlinux2_54  Dockerfile.anolis8  Dockerfile.debian10  Dockerfile.debian11  Dockerfile.debian8  Dockerfile.debian9  Dockerfile.ol8_uek  Dockerfile.ol9_uek  Dockerfile.oracle7  Dockerfile.oracle8_uek  Dockerfile.rhel6  Dockerfile.rhel6_elrepo  Dockerfile.rhel7  Dockerfile.rhel7_centosplus  Dockerfile.rhel7_elrepo_lt  Dockerfile.rhel7_elrepo_lt_archive  Dockerfile.rhel7_elrepo_ml  Dockerfile.rhel7_elrepo_ml_archive  Dockerfile.rhel8  Dockerfile.rhel8_elrepo_lt  Dockerfile.rhel8_elrepo_ml  Dockerfile.rhel8_plus  Dockerfile.rocky8  Dockerfile.rocky9  Dockerfile.tlinux24  Dockerfile.tlinux31  Dockerfile.ubuntu1204  Dockerfile.ubuntu1404_k3  Dockerfile.ubuntu1404_k4  Dockerfile.ubuntu1604_auzre  Dockerfile.ubuntu1604_aws  Dockerfile.ubuntu1604_gcp  (+22 more)
driver/ebpf/: Makefile  consume.c  load.c
driver/libbpf/: .readthedocs.yaml  BPF-CHECKPOINT-COMMIT  CHECKPOINT-COMMIT
driver/ring/: Makefile  core.c  kmod.c  safeboot.c
driver/ringslot/: Cargo.toml  build.rs
driver/rust/: Cargo.toml
driver/src/: bindings.rs  lib.rs
driver/test/: Cargo.toml  Makefile  main.c
driver/tools/: ubuntu12_headers.py  ubuntu14_k3_headers.py  ubuntu14_k4_headers.py  ubuntu18_k418_headers.py
driver/xfer/: Makefile  ring.h  xfer.c  xfer.h
driver/zua/: Makefile  hashmap.h  zua_scanner.c  zua_type.h
plugins/driver/: Cargo.toml  README-zh_CN.md  README.md  build.sh
plugins/journal_watcher/: Cargo.toml  README-zh_CN.md  README.md  build.sh
plugins/scanner/: .gitignore  Cargo.toml  README-zh_CN.md  README.md  build.rs  build.sh  docker_build.sh  libclamav.sh  libclamav_deps.sh  rust-toolchain  settings.toml  wrapper.h
plugins/scanner_clamav/: Cargo.toml  README-zh_CN.md  README.md  build.rs  build.sh  db_updater.sh  docker_build.sh  gen_custom_db.py  get_deps.sh  libclamav.sh  wrapper.h
rasp/NSMount/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
rasp/golang/: CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
rasp/golang-ebpf/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
rasp/librasp/: 0718  Cargo.toml  Makefile
rasp/php/: CMakeLists.txt  README.md  library.cpp  library.h  vcpkg-configuration.json  vcpkg.json
rasp/plugin/: Cargo.toml  Makefile  README-zh_CN.md  settings.toml
rasp/rasp_server/: Cargo.toml  Makefile  README.md
(+2529 files in other folders)
