[package]
name = "ringslot"
version = "0.1.0"
authors = [
    "shenping.matt <shenping.matt@bytedance.com>",
    "zhanglei.sec <zhanglei.sec@bytedance.com>",
    "zhangjiacheng.111 <zhangjiacheng.111@bytedance.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"
[dependencies]
libc = "0.2.0"
anyhow = "1"

[[bin]]
name = "rst"
path = "src/bin/rst.rs"
required-features = []
