[package]
authors = ["zhanglei.sec <zhanglei.sec@bytedance.com>"]
edition = "2018"
name = "driver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
codegen = "0.1"
heck = "0.3"

[dependencies]
anyhow = "=1.0.50"
hex = "0.4.2"
ipnet = "2.3.0"
iprange = "0.6.3"
lazy_static = "1.4.0"
log = "0.4"
sha2 = "0.9.2"
plugin = { path = "../support/rust/plugin" }
plugin_builder = { path = "../support/rust/plugin_builder" }
regex = "1"
reqwest = { version = "0.10.8", features = ["blocking", "rustls-tls"], default-features = false }
ttl_cache = "0.5.1"
twox-hash = "1.6.0"
users = "0.11.0"
walkdir = "2"
clru = "0.3.0"
fnv = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.11"
coarsetime = "0.1"
