[package]
name = "scanner"
version = "0.1.0"
authors = ["zhangjiacheng.111 <zhangjiacheng.111@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# agent plugin
plugin_builder = { path = "../support/rust/plugin_builder" }
plugin = { path = "../support/rust/plugin" }
anyhow = "1.0"
coarsetime = "0.1"
serde = "1.0.117"
serde_json = "1.0.59"
log = { version = "0.4.11", features = ["std"] }

# scanner
yara = {version = "0.6", features = ["vendored"]}
walkdir = "2"
procfs = "0.9.1"
lru = "0.6.5"
crossbeam-channel = "0.5.1"
sha2 = "0.9.3"
libc = "0.2"


[dev-dependencies]
crossbeam = "0.8"