[package]
name = "ringslot"
version = "0.1.0"
authors = [
    "shenping.matt <shenping.matt@bytedance.com>",
    "zhanglei.sec <zhanglei.sec@bytedance.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"
[dependencies]
libc = "0.2.0"
anyhow = "1"