[package]
name = "ringslot"
version = "0.2.0"
build = "src/build.rs"
edition = "2018"
autobins = false
autoexamples = false
autotests = false
autobenches = false
license = "GPLv2"
authors = [
    "shenping.matt <shenping.matt@bytedance.com>",
    "zhanglei.sec <zhanglei.sec@bytedance.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.83"

[dependencies]
libc = "0.2"
anyhow = "1"
libbpf-sys = "1.3.0"

[lib]
crate-type = ["lib", "staticlib"]
