[package]
name = "driver"
version = "0.1.0"
authors = ["zhanglei.sec <zhanglei.sec@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["serde","plugins/debug"]
[dev-dependencies]
prost = "0.7"
[dependencies]
libc = "0.2.0"
anyhow = "1"
nix = "0.20"
reqwest = { version = "0.11", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
sha2 = "0.9"
hex = "0.4"
log = { version = "0.4", features = ["std"] }
lazy_static = "1"
lru-cache = "0.1.2"
twox-hash = "1.6"
ipnet = "2"
iprange = "0.6"
ttl_cache = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0" }
ringslot = { path="../../driver/ringslot" }
plugins = { path = "../lib/rust" }
parking_lot = "0.11"
walkdir = "2.3"
[profile.release]
debug = true
