[package]
name = "scanner"
version = "0.1.0"
authors = ["zhangjiacheng.111 <zhangjiacheng.111@bytedance.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66"

[dependencies]

plugins = { path = "../lib/rust" }

anyhow = "1.0"
coarsetime = "0.1"
crossbeam-channel = "0.5"
# static config
config = "0.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
log = { version = "0.4", features = ["std"] }

twox-hash = "2.0"

reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], default-features = false }

rand = "0.8"
delharc = "0.6"

walkdir = "2.5"
procfs = { version = "0.17" , features = ["default"] }


sha2 = "0.10"
md5 = "0.7"
hex = "0.4"

nix = { version = "0.29", features = ["user", "fs"]  }

libc = "0.2"

fs2 = "0.4.3"

cgroups-rs = "0.3"

zip = { version = "2.2" }


phf = { version = "0.11", features = ["macros"] }

regex = "1.11"
base64 = "0.22"

infer = { version = "0.16", default-features = false }
cached = "0.54"

lru-cache = "0.1.2"

[dev-dependencies]
crossbeam = "0.8"


[profile.release]
debug = 0


[features]
cg_ctrl = []
vendored = []
default = ["vendored", "cg_ctrl"]
debug = ["plugins/debug"]


[[bin]]
name = "scanner_plugin"
path = "src/bin/scanner_plugin.rs"
required-features = ["default"]


[[bin]]
name = "scanner_cli"
path = "src/bin/scanner_cli.rs"
required-features = ["default"]
