[package]
name = "elkeid_rasp"
version = "1.6.0"
edition = "2018"
authors = ["潘玺廷 <panxiting@bytedance.com>"]

[features]
debug = ["plugins/debug"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossbeam = "0.8.0"
log = { version = "0.4", features = ["std"] }
# arg
clap = "2.33.3"
# json
serde = "1.0.117"
serde_json = "1.0.59"
## singal
#signal-hook = "0.3.9"
fs_extra = "1.2.0"
# process
procfs = { git = "https://github.com/AlkenePan/procfs.git" }
# static config
config = "0.11"
lazy_static = "1.4.0"
# flock
fs2 = "0.4.3"
# error handling
anyhow = "1.0.38"
# random
rand = "0.8.3"
# timestamp
coarsetime = "0.1"
# Elkeid Agent Plugin SDK
plugins = { path = "../../plugins/lib/rust"}
# cgroup
cgroups-rs = "0.2.6"
# lock
parking_lot = "0.11"
# hash
md5 = "0.7"
# lru
uluru = "3.0.0"
# base64
base64 = "0.13.0"
# http client
reqwest = { version = "0.11.11", default-features = false, features=["blocking", "rustls-tls"]}

# sha256
sha256 = "1.0.3"

[dependencies.librasp]
path = "../librasp"

[dependencies.rasp_server]
path = "../rasp_server"

[lib]
name = "elkeid_rasp"
path = "src/lib.rs"

[[bin]]
name = "elkeid_rasp_monitor"
path = "src/main.rs"
