[package]
name = "rasp_server"
version = "0.1.0"
authors = ["Alkene Pan <alkenepan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libraspserver"
path = "src/lib.rs"

[[bin]]
name = "rasp_server"
path = "src/bin.rs"

[dependencies]
log = "0.4.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.7.1"
crossbeam = "0.8.0"
lazy_static = "1.4.0"
tokio = {version = "0.2.22", features = ["full"]}
