[package]
name = "rasp_server"
version = "0.1.0"
authors = ["Alkene Pan <alkenepan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libraspserver"
path = "src/lib.rs"

[[bin]]
name = "rasp_server"
path = "src/main.rs"

[dependencies]
nix = "0.24"
anyhow = "1.0"
crossbeam = "0.8"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "~1.34", features = ["full"] }
lazy_static = "1.4"
tokio-util = { version = "0.7.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
clap = { version = "3.0", features=["cargo"]}
env_logger = "0.9"
bytes = "1.1.0"
libc = "0.2.117"
parking_lot = "0.12"

# plugins
plugins = { path = "../../plugins/lib/rust"}
procfs = "0.12"