[package]
name = "plugins"
version = "0.1.0"
authors = ["zhanglei.sec <zhanglei.sec@bytedance.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []
[dependencies]
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
flate2 = "1"
crossbeam = "0.8"
lazy_static = "1.4"
protobuf = "2"
parking_lot = "0.11"
signal-hook = "0.3.14"
libc = "0.2"
serde_json = "1"

[build-dependencies]
protobuf-codegen-pure = "2.3"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Services",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp", 
    "Win32_System_Diagnostics_Debug_Extensions",
]


# Library dependencies (Windows)
[target.'cfg(target_os = "windows")'.dependencies]
anyhow = "1.0"
zip = "2.2"