[package]
name = "flexi_logger"
version = "0.16.2"
authors = ["emabee <meinolf.block@sap.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/flexi_logger"
documentation = "https://docs.rs/flexi_logger"
homepage = "https://crates.io/crates/flexi_logger"
description = """
An easy-to-configure and flexible logger that writes logs to stderr and/or to files. \
It allows custom logline formats, and it allows changing the log specification at runtime. \
It also allows defining additional log streams, e.g. for alert or security messages.\
"""
keywords = ["file", "logger"]
categories = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["colors", "textfilter"]
colors = ["atty", "lazy_static", "yansi"]
specfile = ["specfile_without_notification", "notify"]
specfile_without_notification = ["serde", "toml", "serde_derive"]
syslog_writer = ["libc", "hostname"]
ziplog = ["compress"] # for backwards compatibility
compress = ["flate2"]
textfilter = ["regex"]

[dependencies]
plugin = { path = "../plugin" }
anyhow = "1"
atty = { version = "0.2", optional = true }
chrono = "0.4"
glob = "0.3"
hostname = { version = "0.3", optional = true }
lazy_static = { version = "1.4", optional = true }
log = { version = "0.4", features = ["std"] }
notify = { version = "4.0", optional = true }
regex = { version = "1.1", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
thiserror = "1.0"
toml = { version = "0.5", optional = true }
yansi = { version = "0.5", optional = true }
flate2 = { version = "1.0", optional = true }

[target.'cfg(linux)'.dependencies]
libc = { version = "^0.2.50", optional = true }

[dev-dependencies]
serde_derive = "1.0"
version-sync = "0.9"
#env_logger = '*' # optionally needed for the performance example
