[package]
name = "plugin"
version = "0.1.0"
authors = ["zhanglei.sec <zhanglei.sec@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rmp-serde = "0.14.4"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.11.1"
