[package]
name = "plugin_builder"
version = "0.1.0"
authors = ["zhanglei.sec <zhanglei.sec@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
flexi_logger = { path = "../flexi_logger", features = ["compress"] }
plugin = { path = "../plugin" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14.4"
